# autoware_core

./: .clang-tidy-ci  .gitignore  .pre-commit-config.yaml  codecov.yaml  mkdocs.yaml  packages_above.repos
api/autoware_adapi_adaptors/: CHANGELOG.rst  CMakeLists.txt  package.xml
api/autoware_adapi_adaptors/src/: initial_pose_adaptor.cpp  parameter_helper.hpp  request_state_machine.hpp  route_builder.hpp  routing_adaptor.cpp  routing_adaptor.hpp
api/autoware_adapi_adaptors/test/: test_helpers.cpp
common/autoware_agnocast_wrapper/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_agnocast_wrapper/cmake/: agnocast_wrapper_config_extras.cmake  autoware_agnocast_wrapper_register_node.cmake
common/autoware_agnocast_wrapper/docs/: review_guide.md
common/autoware_agnocast_wrapper/launch/: agnocast_env.launch.py  agnocast_env.launch.xml  discovery_agent.launch.py
common/autoware_agnocast_wrapper/src/: node.cpp
common/autoware_agnocast_wrapper/templates/: node_main_switchable.cpp.in
common/autoware_agnocast_wrapper/test/: test_discovery_agent_launch.py
common/autoware_lanelet2_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_lanelet2_utils/examples/: example_conversion.cpp  example_geometry.cpp  example_hatched_road_markings.cpp  example_intersection.cpp  example_kind.cpp  example_lane_sequence.cpp  example_map_handler.cpp  example_nn_search.cpp  example_route_manager.cpp  example_topology.cpp
common/autoware_lanelet2_utils/scripts/: lanelet_anonymizer.py  test_case_generator.py
common/autoware_lanelet2_utils/src/: conversion.cpp  geometry.cpp  hatched_road_markings.cpp  lane_sequence.cpp  map_handler.cpp  nn_search.cpp  route_manager.cpp  topology.cpp
common/autoware_lanelet2_utils/test/: conversion.cpp  geometry.cpp  hatched_road_marking.cpp  intersection.cpp  kind.cpp  lane_sequence.cpp  map_handler.cpp  nn_search.cpp  original_lanelet2_core_api.cpp  route_manager.cpp  stop_line.cpp  topology.cpp
common/autoware_lanelet2_utils/test_data/: test_nn_search_001.yaml  test_nn_search_002.yaml  test_nn_search_003.yaml  test_route_manager_001.yaml  test_route_manager_002.yaml  test_route_manager_003.yaml
common/autoware_marker_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_marker_utils/src/: marker_conversion.cpp
common/autoware_marker_utils/test/: marker_conversion.cpp
common/autoware_qos_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_trajectory/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_trajectory/examples/: example_add_offset.cpp  example_crossed.cpp  example_find_if.cpp  example_footprint.cpp  example_lateral_metrics.cpp  example_path_point.cpp  example_pchip_vs_cubic_spline.cpp  example_point.cpp  example_reference_path.cpp  example_self_intersecting.cpp  example_temporal_crop.cpp  example_temporal_curvature.cpp  example_temporal_trajectory.cpp
common/autoware_trajectory/src/: path_point.cpp  path_point_with_lane_id.cpp  point.cpp  pose.cpp  temporal_trajectory.cpp  threshold.cpp  trajectory_point.cpp
common/autoware_trajectory/test/: test_add_offset.cpp  test_build.cpp  test_case.hpp  test_crossed.cpp  test_helpers.cpp  test_interpolator.cpp  test_main.cpp  test_pchip.cpp  test_plot.hpp  test_pretty_build.cpp  test_reference_path.cpp  test_reference_path_vm_10_spec.cpp  test_reference_path_vm_10_spec_invalid.cpp  test_shift.cpp  test_temporal_trajectory.cpp  test_trajectory_container.cpp  test_trajectory_container_trajectory_point.cpp  test_utils_find_nearest.cpp  test_utils_footprint.cpp  test_utils_lateral_metrics.cpp  test_utils_temporal_trajectory.cpp  test_utils_velocity.cpp
common/autoware_trajectory/test_data/: test_reference_path_invalid_01.yaml  test_reference_path_valid_01.yaml  test_reference_path_valid_02.yaml  test_reference_path_valid_03.yaml  test_reference_path_valid_04.yaml  test_reference_path_valid_05.yaml  test_reference_path_valid_06.yaml
common/autoware_vehicle_info_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_vehicle_info_utils/src/: vehicle_info.cpp  vehicle_info_utils.cpp
common/autoware_vehicle_info_utils/test/: test_vehicle_info.cpp  test_vehicle_info_utils.cpp
control/autoware_command_gate/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_command_gate/launch/: autoware_command_gate.launch.py
control/autoware_command_gate/src/: autoware_command_gate.cpp  command_gate_mode_builder.cpp  command_gate_mode_builder.hpp
control/autoware_simple_pure_pursuit/: CHANGELOG.rst  CMakeLists.txt  package.xml
control/autoware_simple_pure_pursuit/launch/: simple_pure_pursuit.launch.xml
control/autoware_simple_pure_pursuit/src/: simple_pure_pursuit.cpp  simple_pure_pursuit.hpp  simple_pure_pursuit_node.cpp  simple_pure_pursuit_node.hpp
control/autoware_simple_pure_pursuit/test/: test_simple_pure_pursuit.cpp  test_simple_pure_pursuit_integration.cpp
localization/autoware_ekf_localizer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
localization/autoware_ekf_localizer/launch/: ekf_localizer.launch.xml
localization/autoware_ndt_scan_matcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
localization/autoware_stop_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml
localization/autoware_twist2accel/: CHANGELOG.rst  CMakeLists.txt  package.xml
map/autoware_lanelet2_map_visualizer/: CHANGELOG.rst  CMakeLists.txt  package.xml
map/autoware_map_height_fitter/: CHANGELOG.rst  CMakeLists.txt  package.xml
map/autoware_map_loader/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
map/autoware_map_projection_loader/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_ground_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_planning_factor_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_route_handler/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensing/autoware_vehicle_velocity_converter/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+1024 files in other folders)
