<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_marker_utils</name>
  <version>1.4.0</version>
  <description>The autoware_marker_utils package</description>
  <maintainer email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</maintainer>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <maintainer email="radit.giovanni@tier4.jp">MRaditya Giovanni</maintainer>
  <license>Apache License 2.0</license>

  <author email="radit.giovanni@tier4.jp">MRaditya Giovanni</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>autoware_utils_visualization</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>boost</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
