<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_qos_utils</name>
  <version>1.5.0</version>
  <description>Autoware QoS Utils provides QoS compatibility utilities for different ROS 2 distributions.</description>
  <maintainer email="lxg19892021@gmail.com">xingang liu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
