<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_command_gate</name>
  <version>0.1.0</version>
  <description>Simple gateway that maps operation mode service calls to mode state and gear commands.</description>
  <maintainer email="junya.sasaki@tier4.jp">Junya Sasaki</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_specs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_common_msgs</depend>
  <depend>autoware_component_interface_specs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>class_loader</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
